<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:orientation="vertical"
    tools:context="com.blackinc.debatetimer.LaunchScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/launchLD"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/launchscreenld"
                android:fontFamily="sans-serif"
                android:onClick="launchLD"
                android:padding="12dp"
                android:text="@string/ld"
                android:textColor="#FFF"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/launchPF"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/launchscreenpf"
                android:fontFamily="sans-serif"
                android:onClick="launchPF"
                android:padding="12dp"
                android:text="@string/pf"
                android:textColor="#FFF"
                android:textSize="20sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/launchCX"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/launchscreencx"
                android:fontFamily="sans-serif"
                android:onClick="launchCX"
                android:padding="12dp"
                android:text="@string/policy"
                android:textColor="#FFF"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/launchBQ"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/launchscreenbq"
                android:fontFamily="sans-serif"
                android:onClick="launchBQ"
                android:padding="12dp"
                android:text="@string/bq"
                android:textColor="#FFF"
                android:textSize="13.5sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/launchWS"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/launchscreenws"
                android:fontFamily="sans-serif"
                android:onClick="launchWS"
                android:padding="12dp"
                android:text="@string/ws"
                android:textColor="#FFF"
                android:textSize="16.5sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/launchCong"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/launchscreenspeech"
                android:fontFamily="sans-serif"
                android:padding="12dp"
                android:text="@string/congress"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:onClick="launchCong"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>