<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/firstac"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002E7D32"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/roundexitbuttonstates"
                    android:onClick="reset"
                    android:padding="8dp"
                    android:text="@string/reset_prep"
                    android:textColor="#FFF"
                    android:textSize="16sp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/five_minutes"
                android:textColor="#FFF"
                android:textSize="100sp"
                android:id="@+id/timertext"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="#00000000"
                android:paddingStart="96dp"
                android:paddingEnd="96dp"
                android:paddingTop="64dp"
                android:onClick="timer1AC"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="8dp"
                android:text="@string/aff_prep"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="29sp" />

            <Button
                android:id="@+id/prepbutton"
                android:layout_width="155dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/roundedbutton"
                android:onClick="affPrep" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="32dp"
        android:text="@string/ac"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/roundbuttonstates"
        android:onClick="timer1AC" />

</FrameLayout>