<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00EF6C00"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/two_minutes"
                android:textColor="#FFF"
                android:textSize="100sp"
                android:id="@+id/timertext"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="#00000000"
                android:paddingStart="96dp"
                android:paddingEnd="96dp"
                android:paddingTop="64dp"
                android:onClick="timer2FF"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="8dp"
                android:text="@string/second_prep"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:layout_width="155dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/roundedbutton"
                android:onClick="secondPrep" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="32dp"
        android:text="@string/second_ff"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/secondff"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/roundbuttonstates"
        android:onClick="timer2FF" />

</FrameLayout>